added some test problem descriptions and ran 3d problem

--- a/transport/doc/results/results.tex
+++ b/transport/doc/results/results.tex
@@ -1,7 +1,8 @@
 \documentclass{article}
 \usepackage{graphicx}
-%\usepackage{caption}
 \usepackage{subcaption}
+\usepackage{booktabs}
+\input{../dissertation/content/newcommands}
 
 \setlength{\evensidemargin}{0in}
 \setlength{\oddsidemargin}{0in}
@@ -9,5 +10,6 @@
 \setlength{\textwidth}{6.5in}
 
 \begin{document}
+\input{problem_descriptions}
 \input{void_to_absorber/description}
 \end{document}
