added skew void-to-absorber test case and its results

--- a/transport/doc/results/problem_descriptions.tex
+++ b/transport/doc/results/problem_descriptions.tex
@@ -54,7 +54,8 @@ Initial Conditions & $u_0(\x)=0$\\
 Boundary Conditions & $u(\x,t)=1,\quad \x\in\partial\mathcal{D}^-,\quad t>0,
    \quad\partial\mathcal{D}^-=\{\x\in\partial\mathcal{D}:\mathbf{n}(\x)
    \cdot\mathbf{\Omega}<0\}$\\
-Direction & $\mathbf{\Omega} = [\frac{1}{2},\frac{1}{3},\frac{1}{6}]$\\
+Direction & $\mathbf{\Omega} = \left[\frac{1}{\sqrt{2}},\frac{1}{\sqrt{3}},
+   \frac{1}{\sqrt{6}}\right]$\\
 Cross Section & $\sigma(\x)=\left\{\begin{array}{c l}
    10, & \x\in(\frac{1}{2},1)^d\\
    0,  & \mbox{otherwise}\end{array}\right.$\\
