--- a/transport/doc/results/results.tex
+++ b/transport/doc/results/results.tex
@@ -12,4 +12,5 @@
 \begin{document}
 \input{problem_descriptions}
 \input{void_to_absorber/description}
+\input{skew_void_to_absorber/description}
 \end{document}
