--- a/transport/doc/results/problem_descriptions.tex
+++ b/transport/doc/results/problem_descriptions.tex
@@ -34,7 +34,7 @@ Exact Solution & $u(\x,t)=\left\{\begin{array}{l l}
 \bottomrule\end{tabular}
 \end{table}
 %================================================================================
-\subsection{Skew Void-to-Absorber}
+\subsection{Skew Void-to-Absorber}\label{sec:skew_void_to_absorber}
 This problem is a more general case of the test problem described in
 Section \ref{sec:void_to_absorber} in which the transport direction is
 not necessarily the $+x$ direction but instead is any direction for which
@@ -106,28 +106,40 @@ Table \ref{tab:three_region} summarizes the test parameters.
 \emph{Parameter} & \emph{Value}\\\midrule
 Domain & $\mathcal{D} = (0,1)$\\
 Initial Conditions & $u_0(\x)=0$\\
-Boundary Conditions & $u(\x,t)=1,\quad \x\in\partial\mathcal{D}^-,\quad t>0,
+Boundary Conditions & $u(\x,t)=u_{inc}=1,\quad \x\in\partial\mathcal{D}^-,\quad t>0,
    \quad\partial\mathcal{D}^-=\{\x\in\partial\mathcal{D}:\mathbf{n}(\x)
    \cdot\mathbf{\Omega}<0\}$\\
 Direction & $\mathbf{\Omega} = \mathbf{e}_x$\\
 Cross Section & $\sigma(\x)=\left\{\begin{array}{c l}
-   1,  & x \leq 0.3\\
-   10, & 0.3 < x \leq 0.6\\
-   5,  & x > 0.6
-   \end{array}\right.$\\
+   \sigma_0, & x\in[x_0,x_1]\\
+   \sigma_1, & x\in(x_1,x_2]\\
+   \sigma_2, & x\in(x_2,x_3]
+   \end{array}\right.$,\\
+   & $[x_0,x_1,x_2,x_3] = [0,0.3,0.6,1]$,\\
+   & $[\sigma_0,\sigma_1,\sigma_2] = [1,10,5]$\\
 Source & $q(\x,t)=\left\{\begin{array}{c l}
-   1,  & x \leq 0.3\\
-   5,  & 0.3 < x \leq 0.6\\
-   10, & x > 0.6
-   \end{array}\right.$\\
+   q_0, & x\in[x_0,x_1]\\
+   q_1, & x\in(x_1,x_2]\\
+   q_2, & x\in(x_2,x_3]
+   \end{array}\right.$,\\
+   & $[q_0,q_1,q_2] = [1,5,10]$\\
 Speed & $v=1$\\
-Exact Solution & $u(\x,t)=\left\{\begin{array}{l l}
-   \left\{\begin{array}{l l}
-      e^{-10(x-\frac{1}{2})}, & x\ge\frac{1}{2}, y\ge\frac{1}{2}, z\ge\frac{1}{2}\\
-      1,                      & \mbox{otherwise}
-   \end{array}\right., & x-t<0\\
-   0, & \mbox{otherwise}
-   \end{array}\right.$ \\
+Exact Solution & $u(\x,t) = u_b + u_q$\\
+   & $u_b=\tilde{u_0}(x-vt)\prod\limits_{i=0}^{N_r-1}e^{-\sigma_i d_i},
+        \quad N_r=3$,\\
+   & $u_q=\sum\limits_{i=0}^{N_r-1}u_{q,i}\prod\limits_{j=i+1}^{N_r-1}
+        e^{-\sigma_j d_j}$,\\
+   & $\tilde{u_0}(x) = \left\{\begin{array}{l l}
+        u_{inc}, & x<x_0\\
+        0,       & x\geq 0
+     \end{array}\right.$,\\
+   & $u_{q,i} = \left\{\begin{array}{l l}
+        \frac{q_i}{\sigma_i}\left(1-e^{-\sigma_i d_i}\right), & \sigma_i\neq 0\\
+        q_i d_i, & \sigma_i = 0
+        \end{array}\right.$,\\
+   & $d_i = \max(d^+_i-d^-_i,0),\quad
+     d^+_i = \min(x,x_{i+1}),\quad
+     d^-_i = \max(x-ct,x_i)$ \\
 \bottomrule\end{tabular}
 \end{table}
 %================================================================================
