added three-region test problem and results

--- a/transport/doc/results/results.tex
+++ b/transport/doc/results/results.tex
@@ -13,4 +13,5 @@
 \input{problem_descriptions}
 \input{void_to_absorber/description}
 \input{skew_void_to_absorber/description}
+\input{three_region/description}
 \end{document}
