added git hash for code used in obtaining 3-region results

--- a/transport/doc/results/three_region/description.tex
+++ b/transport/doc/results/three_region/description.tex
@@ -30,4 +30,4 @@ Entropy Time Integrator & BE\\
 \end{figure}
 %-------------------------------------------------------------------------------
 \subsection{Code and Version}
-Deal.ii code, git commit hash 
+Deal.ii code, git commit hash 0fe7871c020c606cef1734f03e653d49938f35bc
